k&s/manifest/monitoring/02-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: service-mesh-demo
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mesh-monitoring-grafana
                port:
                  number: 80
